--- a/TestingObservable/TestingObservable.csproj
+++ b/TestingObservable/TestingObservable.csproj
@@ -65,12 +65,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Tests\UnsubscriberTest.cs" />
-    <Compile Include="Tests\WatchedTest.cs" />
-    <Compile Include="Tests\WatcherTest.cs" />
-    <Compile Include="Unsubscriber.cs" />
-    <Compile Include="Watched.cs" />
-    <Compile Include="Watcher.cs" />
+    <Compile Include="Reactive\Tests\UnsubscriberTest.cs" />
+    <Compile Include="Reactive\Tests\WatchedTest.cs" />
+    <Compile Include="Reactive\Tests\WatcherTest.cs" />
+    <Compile Include="Reactive\Unsubscriber.cs" />
+    <Compile Include="Reactive\Watched.cs" />
+    <Compile Include="Reactive\Watcher.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
